fix: fixed flowers in about overflowing width of page

--- a/style-1320px.css
+++ b/style-1320px.css
@@ -169,6 +169,7 @@ h3{
 /*--------------------------------------------------------------------------------------------------------------------*/
 .about{
     background: white;
+    overflow: hidden;
 }
 .container-backstage{
     margin-top: 140px;
@@ -297,13 +298,13 @@ h3{
     width: 368px;
     height: 275px;
     right: 0;
-    bottom: -100px;
+    bottom: 0;
     transform: scaleX(-100%);
 }
 .about__flower:nth-child(2){
     background-image: url(./assets/images/flower2.png);
     right: -98px;
-    top: -128px;
+    top: 0;
     width: 293px;
     height: 605px;
     -webkit-filter: drop-shadow(0px 6px 2px rgba(0, 0, 0, 0.25));
@@ -314,7 +315,7 @@ h3{
     width: 880px;
     height: 460px;
     left: -588px;
-    bottom: -100px;
+    bottom: 0;
 }
 /*--------------------------------------------------------------------------------------------------------------------*/
 .pick_and_feed{
