--- a/style-660px.css
+++ b/style-660px.css
@@ -61,10 +61,6 @@
         margin-left: -330px;
         margin-bottom: 40px;
     }
-    .about{
-        overflow: hidden;
-
-    }
     .about__backstage-image{
         display: none;
     }
